# bbscoin-wallet

./: CMakeLists.txt  CryptoNoteWallet.cmake  README.md
src/: bitcoinnerowallet.desktop  bitcoinnerowallet.rc  main.cpp  resources.qrc
src/Application/: CommandLineParser.cpp  IWalletUiItem.h  WalletApplication.cpp  WalletApplication.h
src/CryptoNoteWrapper/: CryptoNoteAdapter.cpp  InProcessNodeWorker.cpp
src/Gui/Common/: AboutDialog.ui  BlockchainInstaller.cpp  BlockchainInstaller.h  ExitWidget.ui  ui_AboutDialog.h  ui_ExitWidget.h
src/Gui/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui  WalletStatusBar.cpp  ui_MainWindow.h
src/Gui/Mining/: MiningFrame.cpp  MiningFrame.ui  ui_MiningFrame.h
src/Gui/NoWallet/: NoWalletFrame.ui  ui_NoWalletFrame.h
src/Gui/Options/: ConnectionOptionsFrame.ui  DonationOptionsFrame.ui  OptimizationOptionsFrame.ui  OptionsDialog.cpp  OptionsDialog.ui  ui_ConnectionOptionsFrame.h  ui_DonationOptionsFrame.h  ui_OptimizationOptionsFrame.h  ui_OptionsDialog.h
src/Gui/Overview/: OverviewFrame.cpp  OverviewFrame.h  OverviewHeaderFrame.cpp  OverviewHeaderFrame.ui  ui_OverviewHeaderFrame.h
src/Gui/Send/: SendFrame.cpp  SendFrame.ui  SendGlassFrame.cpp  TransferFrame.ui  ui_SendFrame.h  ui_TransferFrame.h
src/Settings/: Settings.cpp
src/Style/: Style.cpp
src/WalletLogger/: WalletLogger.cpp
src/images/: bbscoin.icns
